--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
   },
   "homepage": "https://github.com/sherzo/sherzodev#readme",
   "dependencies": {
+    "@types/node": "^14.14.9",
+    "@types/react": "^16.9.56",
     "next": "^10.0.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "typescript": "^4.1.2"
   }
 }
