--- a/package.json
+++ b/package.json
@@ -30,5 +30,13 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "typescript": "^4.1.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.0.2",
+    "postcss": "^8.1.8",
+    "tailwindcss": "^2.0.1"
+  },
+  "prettier": {
+    "trailingComma": "all"
   }
 }
