--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
       "baseUrl": ".",
       "paths": {
-        "@components/*": ["components/*"]
+        "@components/*": ["src/components/*"]
       },
       "target": "es6",
       "lib": ["dom", "dom.iterable", "esnext"],
